# rtel

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  README.md  config.h.cmake
po/: CMakeLists.txt  extract-messages.sh  ru.po
src/: CMakeLists.txt  debug.h  gettext.h  main.c  node.c  node.h  rtel.c  rtel.h  rts.h  tty.c  tty.h
